chore: fix overflow of li's

--- a/assets/css/extended/custom-about-page.css
+++ b/assets/css/extended/custom-about-page.css
@@ -198,6 +198,7 @@ filter: contrast(120%);
 	.goal-3,
 	.certification-badge {
 		flex: none;
+		max-width: 100%;
 	}
 
 
